Changed the contrast in the about button to now be grey background around yellow text.

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ li {
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
-    color: yellow;
+    color: white;
 }
 
 .about-link button {
@@ -84,7 +84,6 @@ li {
     font-size: 12px;
     background-color: #6c757d;
     opacity: 0.8;
-    color: yellow;
 }
 
 .about-link button:hover {
