--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@ li {
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
-    color: white;
 }
 
 .about-link button {
@@ -84,6 +83,7 @@ li {
     font-size: 16px;
     background-color: #6c757d;
     opacity: 0.8;
+    color: #757d6c;
 }
 
 .about-link button:hover {
