--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ li {
     font-size: 16px;
     background-color: #6c757d;
     opacity: 0.8;
-    color: #757d6c;
+    color: yellow;
 }
 
 .about-link button:hover {
