Changed the about button text color to be red.

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ li {
     font-size: 19px;
     background-color: #6c757d;
     opacity: 0.8;
-    color: yellow;
+    color: red;
 }
 
 .about-link button:hover {
